source/externs/X11/X.h

typedef unsigned long XID;
typedef unsigned long Atom;		/* Also in Xdefs.h */
typedef unsigned long VisualID;
typedef unsigned long Time;
typedef CARD32 XID;
typedef CARD32 Atom;
typedef CARD32 VisualID;
typedef CARD32 Time;
typedef XID Window;
typedef XID Drawable;
typedef XID Font;
typedef XID Pixmap;
typedef XID Cursor;
typedef XID Colormap;
typedef XID GContext;
typedef XID KeySym;
typedef unsigned char KeyCode;